[gd_scene load_steps=8 format=3 uid="uid://bnsb2fndt7f86"]

[ext_resource type="Script" path="res://scripts/crafting_table.gd" id="1_bbfvl"]
[ext_resource type="Texture2D" uid="uid://bd0g7pfajboem" path="res://assets/texture/crafting_table.png" id="2_y2pxm"]
[ext_resource type="Texture2D" uid="uid://ynuy8r8mwsqy" path="res://assets/particles/rune_light.png" id="3_078i1"]
[ext_resource type="Texture2D" uid="uid://c3s6jruidvkv4" path="res://assets/particles/light.webp" id="4_v7p0n"]
[ext_resource type="AudioStream" path="res://assets/sounds/crafting.wav" id="5_mvbtv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j2op2"]
radius = 33.0
height = 100.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idwfs"]
radius = 35.0
height = 100.0

[node name="CraftingTable" type="StaticBody2D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_bbfvl")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_y2pxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.57079
shape = SubResource("CapsuleShape2D_j2op2")

[node name="TimerSpawnItem" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -2)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_idwfs")

[node name="RuneLight" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("3_078i1")

[node name="PointLight2D" type="PointLight2D" parent="RuneLight"]
position = Vector2(-1.25, -1.25)
scale = Vector2(0.458984, 0.341797)
color = Color(0.211765, 1, 1, 0.443137)
texture = ExtResource("4_v7p0n")

[node name="SomCrafting" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mvbtv")
volume_db = -30.0

[connection signal="timeout" from="TimerSpawnItem" to="." method="_on_timer_spawn_item_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
